plugins {
    id 'java'
    id 'org.springframework.boot' version '2.0.5.RELEASE'
    id "io.spring.dependency-management" version "1.0.6.RELEASE"
    id 'net.ltgt.apt' version '0.10'
}

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
}

dependencies {
    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.5.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-web:2.0.5.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-security:2.0.5.RELEASE'

    compile 'org.postgresql:postgresql:42.2.2'
    compile 'com.h2database:h2'
    compile 'javax.xml.bind:jaxb-api:2.2.11'
    compile 'org.javassist:javassist:3.23.1-GA'

    compileOnly 'org.projectlombok:lombok:1.18.2'
    annotationProcessor 'org.projectlombok:lombok:1.18.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
}
